Fixed right-aligned part in logo

--- a/css/header.css
+++ b/css/header.css
@@ -25,3 +25,7 @@
 	margin-left: auto;
 	width: 100px;
 }
+
+#header h1 {
+    display: inline-block;
+}
